# sicurre-ml

./: .env.example  .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  release-please-config.json
.github/: copilot-instructions.md  security-audit-exceptions.md
.github/agents/: zero-error-remediator.agent.md
.github/hooks/: precompact-progress.json  stop-zero-errors.json
.github/scripts/: evaluate_candidate.py  scan_secrets.py
.github/scripts/hooks/: precompact_progress.py  stop_zero_errors.py
.github/skills/evaluation/: SKILL.md
.github/skills/kaggle-ci/: SKILL.md
.github/skills/training-pipeline/: SKILL.md
.github/workflows/: cd.yml  ci.yml  evaluate-model.yml  release.yml  train.yml
deploy/: deployment-manifest.schema.json  env.alloy.example
deploy/alloy/: config.alloy
deploy/grafana/: README.md  provision_dashboard.py  provision_dashboard.sh
deploy/grafana/alerts/: sicurre-ml-alerts.json
deploy/grafana/dashboards/: sicurre-ml-runtime.json
deploy/nginx/: 00-redirect.conf  api.sicurre.com.conf  nginx-proxy.compose.yml
deploy/scripts/: validate_deployment.py  validate_observability.py
docs/api/: openapi.yaml
ml/: kaggle_training.ipynb
scripts/: bootstrap_shared_nginx_proxy.sh
src/: __init__.py
src/config/: __init__.py  training_config.py
src/data/: __init__.py  loader.py  tokenizer.py
src/evaluation/: __init__.py  golden_set.py  hub_onnx.py  promotion.py  retrieval.py
src/inference/: __init__.py  blocklist.py  llm_classifier.py  onnx_classifier.py  phishtank_loader.py  pipeline.py  rules.py
src/model/: __init__.py  builder.py  metrics.py  trainer.py
src/registry/: __init__.py  callbacks.py  lineage.py
src/serving/: __init__.py  app.py  identity.py  rate_limit.py  telemetry.py
src/training/: __init__.py  args.py  baseline.py
tasks/: agile.md  lessons.md  session-updates.md  todo.md
tests/e2e/: README.md  k6_sicurre_ml.js
tests/integration/: test_serving_endpoints.py
tests/unit/: conftest.py  test_cd_workflow.py  test_deployment_validator.py  test_evaluation_workflow.py  test_training_workflow.py
tests/unit/config/: test_training_config.py
tests/unit/data/: test_loader.py  test_tokenizer.py
tests/unit/evaluation/: test_golden_set.py  test_promotion.py  test_retrieval.py
tests/unit/inference/: test_llm_classifier.py  test_onnx_classifier.py  test_phishtank_loader.py  test_pipeline.py
tests/unit/model/: test_builder.py  test_metrics.py  test_trainer.py
tests/unit/registry/: test_callbacks.py  test_lineage.py  test_registry.py
tests/unit/serving/: test_app.py
tests/unit/training/: test_args.py  test_baseline.py
